--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2>Some projects I have Cooked up!!</h2>
 
     <p>As a person who understands that one is destined to leave a legacy, I (as a coder) have worked on some assignments/projects which showcase my skills in coding.</p>
-    <p>I have on worked on some assignments/projects which showcase some of the skills I have picked up. To have a look on what I have worked on here is my Discord link;</p>
+    <p>I have worked on some assignments/projects which showcase some of the skills I have picked up. As an Innovative To have a look on what I have worked on here is my Discord link;</p>
 
     <div class="project-icons">
       <a href="https://github.com/Umbrellaisnothere" target="_blank"> <i class="fa-brands fa-github"></i></a>
